# contract-migrations

./: .gitignore  Makefile  README.md  contract-migrations.cabal  stack.yaml
app/: Main.hs
contracts/: IdentityAccessManager.sol  Login.sol  Simple.sol  Simple2.sol  SimpleTrimmed.sol  contracts.yaml
contracts/Modifiers/: Owned.sol  ReadPermissioned.sol
contracts/Storage/: BasicUserStorage.sol  StorageBlob.sol
src/: BlocMigrations.hs  Lib.hs
test/Data/: 2  ParserSpec.hs  UploadSpec.hs
uploader/: BuildArtifacts.hs  Main.hs
