name:                contract-migrations
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/contract-migrations#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , blockapps-ethereum
                     , blockapps-bloc-api
                     , blockapps-bloc-client
                     , containers
                     , errors
                     , filemanip 
                     , lens
                     , mtl
                     , servant-client
                     , text
                     , yaml
  default-language:    Haskell2010
  ghc-options:       -Wall

executable contract-migrations-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , http-client
                     , servant-client
                     , contract-migrations
  default-language:    Haskell2010

test-suite contract-migrations-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blockapps-bloc-api
                     , blockapps-ethereum
                     , bytestring
                     , containers
                     , errors
                     , hspec
                     , hspec-expectations-lifted
                     , http-client
                     , lens
                     , monad-logger
                     , raw-strings-qq
                     , servant-server
                     , servant-client
                     , servant-mock
                     , text
                     , yaml
                     , warp
                     , contract-migrations
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/contract-migrations
