name:                contract-migrations
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/contract-migrations#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BlocMigrations
  build-depends:       base >= 4.7 && < 5
                     , ansi-wl-pprint
                     , blockapps-ethereum
                     , blockapps-bloc21-api
                     , blockapps-bloc21-client
                     , blockapps-solidity
                     , blockapps-strato-api
                     , bytestring
                     , containers
                     , errors
                     , filemanip 
                     , http-client
                     , lens
                     , mtl
                     , servant-client
                     , string-conversions
                     , text
                     , yaml
  default-language:    Haskell2010
  ghc-options:       -Wall

executable upload-contracts
  hs-source-dirs:      uploader
  main-is:             Main.hs
  other-modules:       BuildArtifacts
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , blockapps-bloc21-api
                     , blockapps-bloc21-client
                     , blockapps-ethereum
                     , blockapps-solidity
                     , bytestring
                     , contract-migrations
                     , directory
                     , errors
                     , lens
                     , mtl
                     , servant-client
                     , string-conversions
                     , text
  default-language:    Haskell2010

test-suite contract-migrations-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.ParserSpec
                     , Data.UploadSpec
  build-depends:       base
                     , blockapps-bloc21-api
                     , blockapps-ethereum
                     , blockapps-solidity
                     , blockapps-strato-api
                     , bytestring
                     , containers
                     , errors
                     , hspec
                     , hspec-expectations-lifted
                     , http-client
                     , lens
                     , monad-logger
                     , raw-strings-qq
                     , servant-server
                     , servant-client
                     , servant-mock
                     , text
                     , yaml
                     , warp
                     , contract-migrations
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/contract-migrations
